--- a/Predicting_bird_species_with_random_forests.ipynb
+++ b/Predicting_bird_species_with_random_forests.ipynb
@@ -1291,7 +1291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that the score dropped a little so I'll stop here and take the 250 and 11 values for `n_estimators` and `max_features`. (Even though in all honesty my kernel keeps dying when I run a high number of estimators)."
+    "We see that the score dropped a little so I'll stop here and take the 250 and 11 values for `n_estimators` and `max_features`."
    ]
   },
   {
