Fixed some typos

--- a/Identifying_handwritten_symbols.ipynb
+++ b/Identifying_handwritten_symbols.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Identifying handwritten mathematical symbols and letters\n",
-    "In this project I will be training a convolutonal neural network to recognize handwritten mathematical symbols and letters, and I will be using the HASYv2 which has 168,000 images from 369 classes of symbols."
+    "In this project I will be training a convolutonal neural network to recognize handwritten mathematical symbols and letters, and I will be using the HASYv2 dataset which has 168,000 images from 369 classes of symbols."
    ]
   },
   {
