--- a/Identifying_handwritten_symbols.ipynb
+++ b/Identifying_handwritten_symbols.ipynb
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we need to convert the images to numpy arrays to feed them to the neural network, and we'll also take a note of the class, we'll put them in a list `images` and `classes` respectively. We're also going to divide each pixel value in the array by 255 to rescale it to the range between 0 and 1 since neuron activation functions anct best with these values."
+    "Now we need to convert the images to numpy arrays to feed them to the neural network, and we'll also take a note of the class, we'll put them in a list `images` and `classes` respectively. We're also going to divide each pixel value in the array by 255 to rescale it to the range between 0 and 1 since neuron activation functions work best with these values."
    ]
   },
   {
@@ -519,7 +519,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training and evaluation the model\n",
+    "# Training and evaluation of the model\n",
     "We're going to try first a classification multiple layer perceptron with 2 hidden layers. The first layer in the model, the Flatten layer, does some preliminary preprocessing by converting each input image to a 1D array, then we add 2 Dense hidden layers with 300 and 100 neurons each and with the `relu` activation function. Lastly we add a Dense output layer with 369 neurons which is the number of classes in the dataset, with the `softmax` activation function since the outputs are mutually exclusive, and assures that all the weights of the neurons add up to 1."
    ]
   },
@@ -645,9 +645,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We got around 70% accuracy which isn't too bad considering that there are 369 classes, but we'll try anothere network design to see if we can improve it.\n",
+    "We got around 70% accuracy which isn't too bad considering that there are 369 classes, but we'll try another network design to see if we can improve it.\n",
     "\n",
-    "Here we plot training and validation accuracy and loss, and we can see that the training curves are not too far from the validation curves so there isn't too much overfitting happening:"
+    "Here we plot training and validation accuracy and loss, and we can see that the training curves are not far from the validation curves so there isn't too much overfitting happening:"
    ]
   },
   {
@@ -679,7 +679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll now try anothere network, and we'll add a convolution and dropout layer as well:"
+    "We'll now try another network, and we'll add a convolution and dropout layer as well:"
    ]
   },
   {
